--- a/src/Component/Testimonies.scss
+++ b/src/Component/Testimonies.scss
@@ -2,8 +2,11 @@
   display: grid;
   grid-gap: 10px;
   grid-template-columns: 100px 100px 100px;
-  // background-color: #fff;
-  // color: #444;
+  font-weight: 600, 500;
+  font-family: "Barlow", "Semi" "Condensed";
+  font-size: 13px;
+  background-color: hsl(210, 46%, 95%);
+  padding: 13% 10% 13% 10%;
 
   .box-1,
   .box-2,
@@ -12,14 +15,6 @@
   .box-5 {
     border-radius: 5px;
     padding: 20px;
-    // background-color: #444;
-    // color: #fff;
-  }
-
-  .box-1 {
-    grid-column: 1 / 6;
-    grid-row: 1;
-    background-color: #9400d3;
     color: #ffffff;
 
     .profile {
@@ -29,33 +24,99 @@
     .details {
       margin-left: 20px;
       margin-top: -20px;
+
+      h3 {
+        margin-top: 22px;
+      }
+
+      p {
+        margin-top: -10px;
+        margin-bottom: 25px;
+        opacity: 50%;
+      }
     }
+
     .first-paragraph {
       margin-bottom: 20px;
     }
 
     .second-paragraph {
-      opacity: 1;
+      opacity: 70%;
     }
+  }
+
+  .box-1 {
+    grid-column: 1 / 6;
+    grid-row: 1;
+    background-color: hsl(263, 55%, 52%);
   }
 
   .box-2 {
     grid-column: 6;
     grid-row: 1;
+    background-color: hsl(217, 19%, 35%);
   }
 
   .box-3 {
     grid-column: 7;
     grid-row: 1 / 3;
+    background-color: hsl(0, 0%, 100%);
+    color: black;
   }
 
   .box-4 {
     grid-column: 1/3;
     grid-row: 2;
+    background-color: hsl(0, 0%, 100%);
+    color: black;
   }
 
   .box-5 {
     grid-column: 3/7;
     grid-row: 2;
+    background-color: hsl(219, 29%, 14%);
   }
 }
+
+// mobile view
+
+@media only screen and (max-width: 375px) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: 100px;
+    grid-template-rows: 100px, 100px, 100px, 100px, 100px;
+    grid-template-areas:
+      "box1"
+      "box2"
+      "box3"
+      "box4"
+      "box5";
+    grid-gap: 10px;
+    .box-1 {
+      grid-area: box1;
+      grid-column: 1 / 4;
+    }
+    .box-2 {
+      grid-area: box2;
+      grid-column: 1 / 4;
+    }
+    .box-3 {
+      grid-area: box3;
+      grid-column: 1 / 4;
+    }
+    .box-4 {
+      grid-area: box4;
+      grid-column: 1 / 4;
+    }
+    .box-5 {
+      grid-area: box5;
+      grid-column: 1 / 4;
+    }
+  }
+}
+
+// .box-1,
+//   .box-2,
+//   .box-3,
+//   .box-4,
+//   .box-5
